--- a/views/perfil.hbs
+++ b/views/perfil.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mi Blog</title>
+    <title>Perfil</title>
     <link rel="stylesheet" href="css/main.css">
 
 </head>
@@ -19,7 +19,7 @@
                 </div>
                 <div>
                     <h2>Hola</h2>
-                    <p>Esta página ha sido creada con la intención de proveer al público un portal de divulgación científica que agrupe las noticias más destacadas del mundo de la ciencia y respuestas a preguntas frecuentes sobre cómo funciona el universo.</p>
+                    <p>Esta página ha sido creada con la intención de proveer al público un portal de divulgación científica que agrupe las noticias más destacadas del mundo relevantes de la ciencia.</p>
                 </div>
             </div>
         </section>
@@ -33,10 +33,10 @@
                     </article>
                     <article class="proyect-container">
                         <h4>Noticias</h4>
-                        <p>Mantente al tanto de los que esta pasando en elmundo.</p>
+                        <p>Mantente al tanto de lo que esta pasando en el mundo.</p>
                     </article>
                     <article class="proyect-container">
-                        <h4>Tu lugar</h4>
+                        <h4>Un lugar</h4>
                         <p>Donde difundir información o promocionar productos, servicios, eventos, lugares, advertencias etc..</p>
                     </article>
                 </div>
@@ -48,7 +48,7 @@
                 <img src="assets/img/013-newsletter.png" alt="">
                 <div class="contact-left">
                     <a href="/">Contacto</a>
-                    <p>corre: bonninpedro1@gmail.com</p>
+                    <p>correo: bonninpedro1@gmail.com</p>
                 </div>
             </div>
             <div>
