--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -4,7 +4,7 @@
             <div class="icons">
                 <a href="https://www.facebook.com/bonninpedro/"><span class="icon-facebook"></span></a>
                 <a href="https://twitter.com/pedro15989564"><span class="icon-twitter"></span></a>
-                <a href="/"><span class="icon-Instagram"></span></a>
+                <a href="https://www.instagram.com/"><span class="icon-Instagram"></span></a>
                 <a href="https://www.youtube.com/channel/UCYo13r3__zaEhbY-2kozwBQ"><span class="icon-youtube"></span></a>
             </div>
         </section>
